[gd_scene load_steps=4 format=3 uid="uid://bbulvbn3kus8n"]

[ext_resource type="Script" path="res://scripts/enemy_base.gd" id="1_xgg0x"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8manq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_i63cw"]

[node name="EnemyBase" type="CharacterBody2D" groups=["Enemies"]]
collision_layer = 4
collision_mask = 11
script = ExtResource("1_xgg0x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8manq")

[node name="LegsSprite" type="AnimatedSprite2D" parent="."]

[node name="ArmsSprite" type="AnimatedSprite2D" parent="."]

[node name="HeadSprite" type="Sprite2D" parent="."]
rotation = 1.5708

[node name="WeaponHolder" type="Node" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="HearingArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HearingArea"]
light_mask = 0
visibility_layer = 0
shape = SubResource("CircleShape2D_i63cw")

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="KnockdownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="KnockdownTimer" to="." method="_on_KnockdownTimer_timeout"]
